# my-bc-st006

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/app_core/: generator.py  llm.py  orchestrator.py  prompts.py
src/app_core/tools/: generate.py  refine.py  summarize.py
