[tool.poetry]
name = "streamlit-ai-template"
version = "0.1.0"
description = "Reusable Streamlit + OpenAI template"
authors = ["Emmatshi <etshi8712@gmail.com>"]
readme = "README.md"
packages = [{ include = "app_core", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.52.2"
langchain = "^0.2"
langchain-core = "^0.2"
langchain-openai = "^0.1"
openai = "^1.0"
